<resources>
    <string name="app_name">The Cocktail</string>
    <string name="serve">Serve</string>
    <string name="instructions">Instructions</string>

    <string name="ARG_ID">cocktail_id</string>
    <string name="ingredients">Ingredients</string>
    <string name="loading">Loading…</string>
    <string name="filter">Filter</string>
    <string name="preference_name">Settings</string>
    <string name="select">SELECT</string>
    <string name="search">Search…</string>
    <string name="cocktail_image">Cocktail Image</string>
</resources>