<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.aldidwikip.thecocktail.ui.detail.DetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@{data.cocktailName}"
                app:titleTextColor="@android:color/white">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cocktail_image"
                    android:scaleType="fitXY"
                    app:img_from_url="@{data.cocktailImg}"
                    app:layout_collapseMode="parallax"
                    tools:src="@color/colorAccent" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitle"
                    android:layout_marginTop="@dimen/titleMarginTop"
                    android:text="@string/serve" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_item_glass"
                    style="@style/TextContent"
                    android:text="@{data.cocktailGlass}"
                    tools:text="Glass" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitle"
                    android:text="@string/ingredients" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_loading"
                    style="@style/TextContent"
                    android:text="@string/loading"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/list_ingredients" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextTitle"
                    android:text="@string/instructions" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_item_instruction"
                    style="@style/TextContent"
                    android:text="@{data.cocktailInstruction}"
                    tools:text="Instructions" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>